force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/BVCPICKUPADDRESSMAPPING__c.object-meta.xml
<CustomObject>
    <label>BVC Software Mapping</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>BVCPICKUPADDRESSMAPPING Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BVC Software Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>