force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Address Name</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>BVC Software Mappings</relationshipLabel>
    <relationshipName>BVC_Software_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>