force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Id__c</fullName>
    <label>Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>