force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/AWS_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_Sync_Status__c</fullName>
    <label>AWS Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>