force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/BVC_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>BVC_Legal_Entity__c</fullName>
    <formula>IF( BVC_Company_ID__c = &apos;BVCC0001&apos;, &apos;B.V. Chinai &amp; Co. (India) Private Limited&apos;,  
IF(BVC_Company_ID__c = &apos;BVCL0002&apos;, &apos;B.V.C. Logistics Pvt. Ltd&apos;,  
IF(BVC_Company_ID__c = &apos;BVCB0006&apos;, &apos;B.V.C. Brinks Private Limited &apos;, 
IF(BVC_Company_ID__c = &apos;BVCT0007&apos;, &apos;B.V.C. Trade Private Limited&apos;, &apos;&apos;) )  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BVC Legal Entity</label>
    <type>Text</type>
</CustomField>