force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/BVC_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Site_ID__c</fullName>
    <formula>Address__r.BVC_Site_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BVC Site ID</label>
    <type>Text</type>
</CustomField>