force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/BVCSoftwareID__c.field-meta.xml
<CustomField>
    <fullName>BVCSoftwareID__c</fullName>
    <label>BVCSoftwareID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>