force-app/main/default/objects/BVCPICKUPADDRESSMAPPING__c/fields/Registered_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Registered_Account_Id__c</fullName>
    <label>Registered Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>